--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -91,9 +91,18 @@
     <Compile Include="Globals.cs" />
     <Compile Include="Lists.cs" />
     <Compile Include="Warehouse.cs" />
+    <Compile Include="PingWindow.cs" />
+    <Compile Include="PingWindow.designer.cs">
+      <DependentUpon>PingWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PingWindowController.cs" />
+    <Compile Include="PingWindowController.designer.cs">
+      <DependentUpon>PingWindowController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="PingWindow.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
