--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -99,10 +99,22 @@
     <Compile Include="PingWindowController.designer.cs">
       <DependentUpon>PingWindowController.cs</DependentUpon>
     </Compile>
+    <Compile Include="PortScanner.cs" />
+    <Compile Include="PortScanner.designer.cs">
+      <DependentUpon>PortScanner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PortScannerController.cs" />
+    <Compile Include="PortScannerController.designer.cs">
+      <DependentUpon>PortScannerController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PortEntry.cs" />
+    <Compile Include="PortEntryDataSource.cs" />
+    <Compile Include="PortEntryDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
     <InterfaceDefinition Include="PingWindow.xib" />
+    <InterfaceDefinition Include="PortScanner.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
