--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -106,11 +106,20 @@
       <DependentUpon>PortScannerController.cs</DependentUpon>
     </Compile>
     <Compile Include="PortEntry.cs" />
+    <Compile Include="AboutWindow.cs" />
+    <Compile Include="AboutWindow.designer.cs">
+      <DependentUpon>AboutWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AboutWindowController.cs" />
+    <Compile Include="AboutWindowController.designer.cs">
+      <DependentUpon>AboutWindowController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
     <InterfaceDefinition Include="PingWindow.xib" />
     <InterfaceDefinition Include="PortScanner.xib" />
+    <InterfaceDefinition Include="AboutWindow.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
