--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -106,6 +106,10 @@
       <DependentUpon>PortScannerController.cs</DependentUpon>
     </Compile>
     <Compile Include="PortEntry.cs" />
+    <Compile Include="CTextField.cs" />
+    <Compile Include="CTextField.designer.cs">
+      <DependentUpon>CTextField.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
