--- a/IPList/packages.config
+++ b/IPList/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IPNetwork" version="1.3.2.0" targetFramework="xamarinmac20" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinmac20" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Console" version="4.3.1" targetFramework="xamarinmac20" />
@@ -29,6 +31,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime" version="4.3.1" targetFramework="xamarinmac20" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinmac20" />
@@ -40,10 +43,14 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="xamarinmac20" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="xamarinmac20" />
+  <package id="System.Text.Json" version="4.7.0" targetFramework="xamarinmac20" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="xamarinmac20" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinmac20" />
 </packages>
