--- a/IPList/packages.config
+++ b/IPList/packages.config
@@ -25,6 +25,7 @@
   <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinmac20" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinmac20" />
@@ -48,7 +49,7 @@
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinmac20" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="xamarinmac20" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="xamarinmac20" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinmac20" />
