--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -89,6 +89,7 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\6866385081537356024-512.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\6866385081537356024-512-1.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\6866385081537356024-1024.png" />
+    <ImageAsset Include="Resources\Assets.xcassets\.DS_Store" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
@@ -135,12 +136,21 @@
       <DependentUpon>PrefsWindowController.cs</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="AboutWindow.cs" />
+    <Compile Include="AboutWindow.designer.cs">
+      <DependentUpon>AboutWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AboutWindowController.cs" />
+    <Compile Include="AboutWindowController.designer.cs">
+      <DependentUpon>AboutWindowController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
     <InterfaceDefinition Include="PingWindow.xib" />
     <InterfaceDefinition Include="PortScanner.xib" />
     <InterfaceDefinition Include="PrefsWindow.xib" />
+    <InterfaceDefinition Include="AboutWindow.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
