--- a/IPList/packages.config
+++ b/IPList/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="xamarinmac20" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinmac20" />
+  <package id="SharpCifs.Std" version="0.2.13" targetFramework="xamarinmac20" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Buffers" version="4.5.0" targetFramework="xamarinmac20" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinmac20" />
@@ -23,6 +24,8 @@
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinmac20" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="xamarinmac20" />
+  <package id="System.Net.NetworkInformation" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinmac20" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinmac20" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="xamarinmac20" />
