Added tools menu with a basic whois

--- a/IPList/IPList.csproj
+++ b/IPList/IPList.csproj
@@ -160,6 +160,14 @@
     <Compile Include="DataViewerWindow\DataViewerWindowController.designer.cs">
       <DependentUpon>DataViewerWindowController.cs</DependentUpon>
     </Compile>
+    <Compile Include="WhoisWindow.cs" />
+    <Compile Include="WhoisWindow.designer.cs">
+      <DependentUpon>WhoisWindow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WhoisWindowController.cs" />
+    <Compile Include="WhoisWindowController.designer.cs">
+      <DependentUpon>WhoisWindowController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
@@ -168,6 +176,7 @@
     <InterfaceDefinition Include="PortScanWindow\PortScanner.xib" />
     <InterfaceDefinition Include="PrefsWindow\PrefsWindow.xib" />
     <InterfaceDefinition Include="DataViewerWindow\DataViewerWindow.xib" />
+    <InterfaceDefinition Include="WhoisWindow.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Mac\Xamarin.Mac.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
